--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 :root {
     --primary-color: hsl(4, 100%, 67%);
+    --secondary-color: hsla(4, 100%, 67%, 0.2);
     --white-color: hsl(0, 0%, 100%);
     --grey-color: hsl(231, 7%, 60%);
     --charcoal-grey: hsl(235, 18%, 26%);
@@ -45,12 +46,14 @@ body {
     font-size: 1rem;
     min-height: 100vh;
     line-height: 1.5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
     width: 100%;
-    max-width: 40rem;
-    
+    max-width: 50rem;
 }
 
 .hero-image img {
@@ -61,7 +64,7 @@ body {
     margin: 2rem 1.5rem;
 }
 
-.signup-form h2 {
+.heading {
     font-size: 2.5rem;
     color: var(--dark-grey);
     padding-bottom: 1rem;
@@ -118,7 +121,7 @@ body {
     font-weight: bold;
 }
 
-#form button {
+.btn {
     margin-top: 1.5rem;
     border: none;
     background-color: var(--dark-grey);
@@ -126,10 +129,10 @@ body {
 }
 
 .error-state {
-   background-color: var(--primary-color)!important;
-   opacity: 0.3;
+   background-color: var(--secondary-color);
    border: 1px solid var(--primary-color)!important;
    color: var(--primary-color)!important;
+   
 }
 
 input, button {
@@ -139,17 +142,43 @@ input, button {
     padding: 0.75rem 1.25rem;
 }
 
-
-
-
-
-
-
-
-
-
-
-
 .success-message {
     display: none;
+    margin: 1.5rem;
 }
+
+.success-header {
+    margin-top: 12rem;
+    margin-bottom: 22rem;
+}
+
+.success-icon {
+    padding-bottom: 2.5rem;
+}
+
+.success-heading {
+    line-height: 1;
+    padding-bottom: 1.5rem;
+}
+
+.email-text {
+    font-weight: bold;
+}
+
+
+@media (min-width: 1024px) {
+    
+    body {
+        background-color: var(--dark-grey);
+    }
+
+    .container {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        padding: 1.5rem;
+        background-color: var(--white-color);
+    }
+}
+
+
